加入工作台逻辑

--- a/service/.env.example
+++ b/service/.env.example
@@ -21,13 +21,8 @@ AI_MODE=mock
 LIVE_AI_TESTS=false
 LIVE_VIDEO_TESTS=false
 
-AI_GATEWAY_BASE_URL=https://newapi.aisonnet.org/v1
-AI_GATEWAY_API_KEY=sk-REPLACE_ME
-
-# Default models (editable in admin UI too)
-LLM_MODEL=deepseek-v3.2
-IMAGE_MODEL=jimeng-4.5
-VIDEO_MODEL=jimeng-video-3.5-pro-10s
+# AI provider settings are managed via admin UI at /admin/providers
+# No API keys or base URLs should be configured here
 LLM_MAX_TOKENS=600
 
 # Upload limits
