--- a/service/package.json
+++ b/service/package.json
@@ -36,13 +36,15 @@
     "form-data": "^4.0.5",
     "fs-extra": "^11.3.3",
     "image-size": "^2.0.2",
+    "mammoth": "^1.11.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.28",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "word-extractor": "^1.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
