--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest run"
+    "test": "vitest run",
+    "start:prod": "serve -s dist -l 4026"
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -33,6 +34,7 @@
     "globals": "^16.5.0",
     "jsdom": "^25.0.1",
     "sass": "^1.97.2",
+    "serve": "^14.2.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
