prepare to ship 4

--- a/service/.env.production.example
+++ b/service/.env.production.example
@@ -17,6 +17,9 @@ JWT_SECRET=please_change_me
 # Seed control
 SEED_ON_START=false
 
+# AI
+AI_MODE=real
+
 # Model/provider keys (fill as needed)
 # GEMINI_API_KEY=
 # DOUDAO_API_KEY=
